# boeing_gazebo_model_attachement_plugin-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  setup.py  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules
gazebo_model_attachment_plugin/: CMakeLists.txt  package.xml
gazebo_model_attachment_plugin/include/gazebo_model_attachment_plugin/: gazebo_model_attachment_plugin.h
gazebo_model_attachment_plugin/src/: gazebo_model_attachment_plugin.cpp
gazebo_model_attachment_plugin/src/gazebo_model_attachment_plugin/: gazebo_client.py
gazebo_model_attachment_plugin/test/: test.world  test_plugin.test.py
gazebo_model_attachment_plugin_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
gazebo_model_attachment_plugin_msgs/srv/: Attach.srv  Detach.srv
include/gazebo_model_attachment_plugin/: gazebo_model_attachment_plugin.h
rpm/: ros-humble-gazebo-model-attachment-plugin-msgs.spec  template.spec
src/: gazebo_model_attachment_plugin.cpp
src/gazebo_model_attachment_plugin/: gazebo_client.py
test/: test.world  test_plugin.py  test_plugin.test
