<?xml version="1.0"?>
<package format="2">
    <name>gazebo_model_attachment_plugin</name>
    <version>1.0.2</version>
    <description>Model Attachment Plugin</description>
    <maintainer email="Jason.Cochrane@boeing.com">Boeing</maintainer>
    <maintainer email="christopher.mcdermott2@boeing.com">Boeing</maintainer>
    <author>Boeing</author>
    <license>Apache-2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>gazebo</depend>
    <depend>gazebo_msgs</depend>
    <depend>gazebo_ros</depend>
    <depend>message_generation</depend>
    <depend>roscpp</depend>

    <exec_depend>rospy</exec_depend>
    <exec_depend>message_runtime</exec_depend>

    <test_depend>rostest</test_depend>

    <export>
        <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
    </export>
</package>

